--- a/public/network/cloudflare-tunnel-ssh/index.html
+++ b/public/network/cloudflare-tunnel-ssh/index.html
@@ -40,24 +40,24 @@
 如果接有显示器，那么登陆后查看ip地址
 如果没有接显示器，可以从路由器后台查看主机名为armbian的设备ip
 2 创建tunnel 进入https://one.dash.cloudflare.com/">
-    <meta itemprop="wordCount" content="104">
+    <meta itemprop="wordCount" content="105">
     <meta itemprop="image" content="http://localhost:1313/images/hero.png">
     <meta itemprop="keywords" content="Cloudflare Tunnel,Ssh内网穿透">
     <title>Cloudflare tunnel配置ssh连接 :: HaBox 技术支持站</title>
     <link href="../../network/cloudflare-tunnel-ssh/index.xml" rel="alternate" type="application/rss+xml" title="Cloudflare tunnel配置ssh连接 :: HaBox 技术支持站">
     <link href="../../network/cloudflare-tunnel-ssh/index.print.html" rel="alternate" type="text/html" title="Cloudflare tunnel配置ssh连接 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1727497742" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1727497742" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1727497742" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1727497742" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1727497742" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1727497742" rel="stylesheet">
-    <link href="../../css/fonts.css?1727497742" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1727497742" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1727497742" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1727497742" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1727497742" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1727497742" rel="stylesheet">
-    <link href="../../css/print.css?1727497742" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1727497742"></script>
+    <link href="../../css/fontawesome-all.min.css?1727498211" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1727498211" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1727498211" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1727498211" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1727498211" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1727498211" rel="stylesheet">
+    <link href="../../css/fonts.css?1727498211" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1727498211" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1727498211" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1727498211" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1727498211" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1727498211" rel="stylesheet">
+    <link href="../../css/print.css?1727498211" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1727498211"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -159,25 +159,25 @@
 <p>导航到<strong>Networks</strong> &gt; <strong>Tunnels</strong></p>
 <p>然后<strong>Create a tunnel</strong></p>
 <p>tunnel type就默认的cloudflare，然后next</p>
-<p><a href="#R-image-850bf7d1504194d8b564188989a5a7f2" class="lightbox-link"><img alt="image-20240928114211562" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928114211562.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-850bf7d1504194d8b564188989a5a7f2"><img alt="image-20240928114211562" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928114211562.png"></a></p>
+<p><a href="#R-image-8d4e1e83da4499fd80c589cdef6074e7" class="lightbox-link"><img alt="image-20240928114211562" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928114211562.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8d4e1e83da4499fd80c589cdef6074e7"><img alt="image-20240928114211562" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928114211562.png"></a></p>
 <p>然后设置tunnel name,然后save tunnel</p>
 <h2 id="3-安装和配置cloudflared">3 安装和配置cloudflared</h2>
 <p>**Choose an operating system:**Debian</p>
 <p>**Choose an architecture:**arm64-bit</p>
-<p><a href="#R-image-4f56270915009613c27835a3d071979c" class="lightbox-link"><img alt="image-20240928111438949" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111438949.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4f56270915009613c27835a3d071979c"><img alt="image-20240928111438949" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111438949.png"></a></p>
+<p><a href="#R-image-83a706bc7c6195739fa686c6f29c5c6f" class="lightbox-link"><img alt="image-20240928111438949" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111438949.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-83a706bc7c6195739fa686c6f29c5c6f"><img alt="image-20240928111438949" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111438949.png"></a></p>
 <p>安装完成后，点击右下角save</p>
 <h2 id="4-配置public-hostname">4 配置Public Hostname</h2>
 <p>再回到Tunnels列表，就可以看到刚才创建的Tunnel了，拉到右边有3个点，点它会弹出配置入口<strong>Configure</strong></p>
 <p>切换到<strong>Public Hostname</strong></p>
 <p>Add a public hostname</p>
-<p><a href="#R-image-11f05f505d80db279fccf75e28c1a806" class="lightbox-link"><img alt="image-20240928111738284" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111738284.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-11f05f505d80db279fccf75e28c1a806"><img alt="image-20240928111738284" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111738284.png"></a></p>
+<p><a href="#R-image-c69a1a3ddfd3ac400714240b76dd2b11" class="lightbox-link"><img alt="image-20240928111738284" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111738284.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c69a1a3ddfd3ac400714240b76dd2b11"><img alt="image-20240928111738284" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111738284.png"></a></p>
 <p>同样，在<strong>Public hostnames</strong>列表也是点右边的3个小点进入配置</p>
 <h2 id="5-设置private-network">5 设置Private Network</h2>
 <p>切换到<strong>Private Network</strong></p>
-<p>CIDR：192.168.3.0/24</p>
+<p>CIDR：192.168.3.0/24  （根据自身情况填写）</p>
 <p>Description：随便</p>
 <h2 id="6-回到ssh客户端">6 回到ssh客户端</h2>
 <p>ssh客户端的设备也要安装cloudflared</p>
@@ -193,9 +193,8 @@ Host ssh.ha-box.xyz
 <p>开启一个终端，执行</p>
 <p>ssh <a href="mailto:root@ssh.ha-box.xyz" rel="external" target="_self">root@ssh.ha-box.xyz</a></p>
 <p>如果一切顺利，就可以看到下面的信息</p>
-<p>This key is not known by any other names.
-Are you sure you want to continue connecting (yes/no/[fingerprint])?</p>
-
+<div class="highlight wrap-code"><pre tabindex="0"><code>This key is not known by any other names.
+Are you sure you want to continue connecting (yes/no/[fingerprint])? </code></pre></div>
 <script
   id="utteranc"
   src="https://utteranc.es/client.js"
@@ -290,13 +289,13 @@ Are you sure you want to continue connecting (yes/no/[fingerprint])?</p>
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1727497742" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1727497742" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1727497742" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1727497742" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1727497742" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1727497742" defer></script>
-        <script src="../../js/search.js?1727497742" defer></script>
+        <script src="../../js/auto-complete.js?1727498211" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1727498211" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1727498211" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1727498211" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1727498211" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1727498211" defer></script>
+        <script src="../../js/search.js?1727498211" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -390,9 +389,9 @@ Are you sure you want to continue connecting (yes/no/[fingerprint])?</p>
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1727497742" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1727497742" defer></script>
-    <script src="../../js/theme.js?1727497742" defer></script>
+    <script src="../../js/clipboard.min.js?1727498211" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1727498211" defer></script>
+    <script src="../../js/theme.js?1727498211" defer></script>
 
 
   </body>
